set+get,nestedobj(class),closures

--- a/index.html
+++ b/index.html
@@ -89,7 +89,8 @@
             </div>
         </div>
         -->
-        
+        <button id = "prompt">Click here!</button>
+        <button id = "clear">Clear Timeout</button>
         <script src ="script.js"></script>
     </body>
 </html>
