--- a/index.html
+++ b/index.html
@@ -89,8 +89,28 @@
             </div>
         </div>
         -->
-        <button id = "prompt">Click here!</button>
-        <button id = "clear">Clear Timeout</button>
-        <script src ="script.js"></script>
+        
+        <!-- (7)
+         <button id = "prompt">Click here!</button>
+         <button id = "clear">Clear Timeout</button>
+          -->
+
+        <!-- (8)
+            <div id = "clock-container">
+                <div id = "clock">00:00:00</div>
+            </div>
+        -->
+        <h1 id = 'H1'>Stopwatch</h1>
+        <div id = 'container'>
+            <div id ='time'>
+                00:00:00:00
+            </div>
+            <div id = 'controls'>
+                <button id ='reset'>Reset</button>
+                <button id = 'start'>Start</button>
+                <button id = 'pause'>Pause</button>
+            </div>
+        </div>
+        <script src ="script.js"></script> 
     </body>
 </html>
