--- a/index.html
+++ b/index.html
@@ -176,6 +176,12 @@
             </ol>
         
         -->
+        <!-- Event Listener
+            <div id = 'box'>
+                Click Me
+            </div>
+            <button id ='clicker'>Click Me</button>
+        -->
         <script src ="script.js"></script> 
     </body>
 </html>
