--- a/index.html
+++ b/index.html
@@ -182,6 +182,32 @@
             </div>
             <button id ='clicker'>Click Me</button>
         -->
-        <script src ="script.js"></script> 
+        <!-- Key Events
+             <div id = 'box'>
+                <p>😟</p>
+            </div>
+         -->
+        <!-- Hide/Show HTML
+            <button id="button">Hide</button>
+            <img src ='dices/1.png'>
+        -->
+        <!-- Node List
+        <button class ="mybutton">1</button>
+        <button class ="mybutton">2</button>
+        <button class ="mybutton">3</button>
+        <button class ="mybutton">4</button> 
+        -->
+
+        <!-- Class List and Properties 
+         (PT.1)
+            <button id = "mybutton">Button</button>
+         (PT.2)
+        -->
+         <button class = "mybutton">1</button>
+         <button class = "mybutton">2</button>
+         <button class = "mybutton">3</button>
+         <button class = "mybutton">4</button>
+
+<script src ="script.js"></script> 
     </body>
 </html>
