--- a/index.html
+++ b/index.html
@@ -202,12 +202,43 @@
          (PT.1)
             <button id = "mybutton">Button</button>
          (PT.2)
-        -->
-         <button class = "mybutton">1</button>
-         <button class = "mybutton">2</button>
-         <button class = "mybutton">3</button>
-         <button class = "mybutton">4</button>
+            <button class = "mybutton">1</button>
+            <button class = "mybutton">2</button>
+            <button class = "mybutton">3</button>
+            <button class = "mybutton">4</button>
 
-<script src ="script.js"></script> 
+        -->
+
+        <!-- (11)
+            <h1>Rock - Paper - Scissors</h1>
+            <div id="scoreboard">
+                <div>Wins: <span id="wins">0</span></div>
+                <div>Losses: <span id="losses">0</span></div>
+                <div>Ties: <span id="ties">0</span></div>
+            </div>
+            <div id = 'choices'>
+                <button onclick= "playGame('rock')">🗿</button>
+                <button onclick= "playGame('paper')">📝</button>
+                <button onclick = "playGame('scissor')">✂️</button>
+            </div>
+            <div id = 'playerdisplay'>You chose: </div>
+            <div id = 'computerdisplay'>Computer chose: </div>
+            <div id = 'result'></div> 
+        -->
+        <!-- (12)
+        <div class = 'slider'>
+            <div class = 'slides'>
+                <img class = 'slide' src ='dices/1.png' alt="Dice1">
+                <img class = 'slide' src ='dices/2.png' alt="Dice2">
+                <img class = 'slide' src ='dices/3.png' alt="Dice3">
+            </div>
+            
+            <button class = 'prev' onclick ='prevSlide()'>&#10094</button>
+            <button class = 'next' onclick  ='nextSlide()'>&#10095</button>
+        </div> 
+        
+        -->
+
+        <script src ="script.js"></script> 
     </body>
 </html>
