--- a/index.html
+++ b/index.html
@@ -238,7 +238,12 @@
         </div> 
         
         -->
-
-        <script src ="script.js"></script> 
+        <!-- (13)
+            <input type = 'text' id = 'movie'>
+            <button onclick="getData()" id ='btn'></button>
+            <img style="display: none" id="result">
+            
+        -->
+        <script src ="script.js"></script>  
     </body>
 </html>
