--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>ScripTesting</title>
+        <link rel ="icon" href="dices/3.png">
         <link  rel ="stylesheet" href = "style.css">
     </head>
     <body>
